//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Customer {
  id String [pk]
  firstName String [not null]
  lastName String
  profileImg String
  memberPoint Int [not null, default: 0]
  email String [unique, not null]
  phone String [unique, not null]
  password String [not null]
  Bookings Booking [not null]
  Reviews Review [not null]
}

Table Admin {
  id Int [pk, increment]
  isAdmin Int [not null, default: 1]
  email String [unique, not null]
  password String [not null]
}

Table Restaurant {
  id String [pk]
  restaurantName String [unique, not null]
  ownerFirstName String [not null]
  ownerLastName String [not null]
  email String [unique, not null]
  phone String [unique, not null]
  password String [not null, default: '1234']
  profileImg String
  latitude Float
  longitude Float
  price Int [not null]
  categoryIndex Int [not null]
  districtIndex Int
  nationIndex Int [not null]
  status Int [not null, default: 0]
  Bookings Booking [not null]
  Reviews Review [not null]
  RestaurantImages RestaurantImage [not null]
  Packages Package [not null]
  BusinessTimes BusinessTime [not null]
  RestaurantPendingEdits RestaurantPendingEdit [not null]
  PackagePendings PackagePending [not null]
  TempRestaurantImage TempRestaurantImage [not null]
}

Table RestaurantPendingEdit {
  id Int [pk, increment]
  restaurantName String [unique, not null]
  profileImg String
  latitude Float
  longitude Float
  price Int [not null]
  categoryIndex Int [not null]
  districtIndex Int
  nationIndex Int [not null]
  restaurant Restaurant [not null]
  restaurantId String [not null]
  tempBusinessTimes TempBusinessTime [not null]
}

Table RestaurantImage {
  id Int [pk, increment]
  url String [not null]
  restaurantId String [not null]
  restaurant Restaurant [not null]
}

Table TempRestaurantImage {
  id Int [pk, increment]
  url String [not null]
  restaurant Restaurant [not null]
  restaurantId String [not null]
}

Table Package {
  id Int [pk, increment]
  name String [not null]
  detail String [not null]
  price Int [not null]
  status Int [not null, default: 0]
  img String
  restaurantId String [not null]
  restaurant Restaurant [not null]
  Booking Booking [not null]
}

Table PackagePending {
  id Int [pk, increment]
  name String [not null]
  detail String [not null]
  price Int [not null]
  status Int [not null, default: 0]
  img String
  restaurantId String [not null]
  restaurant Restaurant [not null]
}

Table Booking {
  id String [pk]
  customerId String [not null]
  customer Customer [not null]
  restaurantId String [not null]
  restaurant Restaurant [not null]
  orderStatus Int [not null, default: 0]
  payment Payment [not null]
  paymentId String [not null]
  package Package [not null]
  packageId Int [not null]
  totalCustomer Int [not null]
  totalKid Int [not null, default: 0]
  specialRequest String
  createdAt DateTime [default: `now()`, not null]
  bookingDate String [not null]
  bookingTime String [not null]
}

Table Payment {
  id String [pk]
  paymentStatus Int [not null, default: 0]
  Bookings Booking [not null]
}

Table Review {
  id Int [pk, increment]
  message String [not null]
  createAt DateTime [default: `now()`, not null]
  restaurantId String [not null]
  restaurant Restaurant [not null]
  customer Customer [not null]
  customerId String [not null]
  isAnonymous Int [not null, default: 0]
  score Float [not null]
  ReviewImages ReviewImage [not null]
}

Table ReviewImage {
  id Int [pk, increment]
  url String [not null]
  reviewId Int [not null]
  review Review [not null]
}

Table ChatRoom {
  id Int [pk, increment]
  roomId String [not null]
  name String [not null]
}

Table BusinessTime {
  id Int [pk, increment]
  day Int [not null]
  openTime String [not null]
  closedTime String [not null]
  restaurant Restaurant [not null]
  restaurantId String [not null]
}

Table TempBusinessTime {
  id Int [pk, increment]
  day Int [not null]
  openTime String [not null]
  closedTime String [not null]
  restaurantPendingEdit RestaurantPendingEdit [not null]
  restaurantPendingEditId Int [not null]
}

Ref: RestaurantPendingEdit.restaurantId > Restaurant.id [delete: Cascade]

Ref: RestaurantImage.restaurantId > Restaurant.id [delete: Cascade]

Ref: TempRestaurantImage.restaurantId > Restaurant.id

Ref: Package.restaurantId > Restaurant.id [delete: Cascade]

Ref: PackagePending.restaurantId > Restaurant.id [delete: Cascade]

Ref: Booking.customerId > Customer.id [delete: Cascade]

Ref: Booking.restaurantId > Restaurant.id [delete: Cascade]

Ref: Booking.paymentId > Payment.id [delete: Cascade]

Ref: Booking.packageId > Package.id [delete: Cascade]

Ref: Review.restaurantId > Restaurant.id [delete: Cascade]

Ref: Review.customerId > Customer.id [delete: Cascade]

Ref: ReviewImage.reviewId > Review.id [delete: Cascade]

Ref: BusinessTime.restaurantId > Restaurant.id [delete: Cascade]

Ref: TempBusinessTime.restaurantPendingEditId > RestaurantPendingEdit.id [delete: Cascade]